# SimpleRenderOpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
include/: bmpheader.h  matrix_vector_math.h  scop.h
includes/: bmpheader.h  matrix_vector_math.h  opengl_simple_render.h  parse_json.h  scop.h
jsons/: 42.json  aaa.json  awp.json  config.json  mult_objs.json  rock.json  teapot.json
libft/: CMakeLists.txt
libft/include/: ft_read.h
libft/src/: CMakeLists.txt
libft/src/ft_ch/: ft_isalnum.c  ft_isascii.c  ft_isdigit.c
libft/src/ft_lst/: CMakeLists.txt  ft_lstaddend.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c
libft/src/ft_mem/: CMakeLists.txt  ft_bzero.c  ft_dpclear.c  ft_dpclearnum.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memmove.c
libft/src/ft_num/: CMakeLists.txt  ft_ltoa_base.c  ft_numlen.c  ft_utoa_base.c
libft/src/ft_printf/: CMakeLists.txt  get_float_components.c  get_integer.c  help_functions_for_float.c  int_output.c  output_processing_di.c  output_processing_f.c  output_processing_uob.c  output_processing_x.c  processing_functions.c
libft/src/ft_read/: ft_read_file.c
libft/src/ft_str/: CMakeLists.txt  ft_strcat.c  ft_strchrpos.c  ft_strclr.c  ft_striter.c  ft_strjoinfree.c  ft_strlcat.c  ft_strlen.c  ft_strlowcase.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnewsetchar.c  ft_strsplit.c  ft_strstr.c  ft_strsubfree.c  ft_strtrim.c  ft_strupcase.c  ft_strwclen.c
libft/src/ft_system/: CMakeLists.txt  ft_exit_with_error.c
libs/SDL2-2.0.12/: Makefile  Makefile.rules  config.status  libtool
libs/cJSON/: CMakeLists.txt  Makefile  libcjson_utils.dylib.1
libs/cJSON/lib/lib/: libcjson.dylib.1  libcjson.dylib.1.7.14  libcjson_utils.dylib.1.7.14
libs/glew-2.1.0/lib/: libGLEW.2.1.0.dylib
libs/libft/: Makefile
libs/libft/include/: ft_printf.h  ft_read.h  libft.h
libs/libft/src/: CMakeLists.txt
libs/libft/src/ft_ch/: CMakeLists.txt  ft_isalpha.c  ft_isprintable.c  ft_isspace.c  ft_tolower.c  ft_toupper.c
libs/libft/src/ft_lst/: ft_lstadd.c  ft_lstdel.c  ft_lstmap.c
libs/libft/src/ft_mem/: ft_memccpy.c  ft_memcpy.c  ft_memdel.c  ft_memset.c
libs/libft/src/ft_num/: ft_atoi.c  ft_atoi_base.c  ft_itoa.c
libs/libft/src/ft_printf/: char_and_nonstandard_output.c  float_output.c  ft_printf.c  get_fraction.c  help_functions_for_int.c  other_and_bonus.c
libs/libft/src/ft_put/: CMakeLists.txt  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libs/libft/src/ft_read/: CMakeLists.txt  ft_multi_files_read_line.c  ft_read_file.c  ft_read_line.c  ft_single_file_read_line.c
libs/libft/src/ft_str/: ft_strchnum.c  ft_strchr.c  ft_strchrpos.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strisnum.c  ft_striteri.c  ft_strjoin.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsub.c  ft_strsubfree.c  ft_strwlen.c  ft_strwnumber.c
libs/libft/src/ft_swap/: CMakeLists.txt  ft_dswap.c  ft_fswap.c  ft_swap.c
libs/libft/src/ft_system/: CMakeLists.txt  ft_exit_with_error.c  ft_log_error.c
libs/libft/src/ft_vector/: CMakeLists.txt  ft_vector_create.c  ft_vector_free.c  ft_vector_push_back.c
libs/libglew/: .gitignore
libs/libglew/include/GL/: glew.h
libs/libjtoc/: Makefile
libs/libjtoc/include/: libjtoc.h
libs/libjtoc/src/: jtoc_node.c  jtoc_utils.c
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  create_shader_program.c  load_bmp.c  main.c
src/matrix_vector_math/: mvm_identity.c  mvm_multiply.c  mvm_projection.c  mvm_utilities.c
srcs/: CMakeLists.txt  create_object_from_raw.c  create_shader_program.c  events_processing.c  init.c  main.c  render_loop.c  utilities.c
srcs/events_processing/: CMakeLists.txt  events_processing.c  objects_events_processing.c
srcs/loaders/: CMakeLists.txt  load_and_create_shader_program.c  load_bmp.c  load_obj_file.c  load_object.c
srcs/matrix_vector_math/: CMakeLists.txt  mvm_add.c  mvm_multiply.c  mvm_rotate.c  mvm_scale.c  mvm_translate.c
srcs/parse_from_json/: CMakeLists.txt  pfg_parse_main.c  pfg_parse_scene_objects.c  pfg_parse_scenes.c  pfg_parse_window.c  pfg_utilities.c  pfj_parse_main.c  pfj_parse_scene_objects.c  pfj_parse_scenes.c  pfj_parse_window.c  pfj_utilities.c
